--- a/index.html
+++ b/index.html
@@ -255,6 +255,9 @@ $(document).ready(function () {
     Github
   </a>
 </li>
+<li>
+  <a href="https://www.linkedin.com/in/matthewsolone/">Linkedin</a>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
