--- a/math485.html
+++ b/math485.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Hello There</title>
+<title>Math 485 Advanced topics in Data Science</title>
 
 <script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -279,13 +279,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Hello There</h1>
+<h1 class="title toc-ignore">Math 485 Advanced topics in Data Science</h1>
 
 </div>
 
 
-<p>Welcome to my website !</p>
-<p>Here I will be sharing updates on my projects and academic experience to show what I have to offer.</p>
+
 
 
 
