--- a/blog1.html
+++ b/blog1.html
@@ -9,9 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content="Matthew Solone" />
 
 
-<title>Matt Solone</title>
+<title>Blog 1</title>
 
 <script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -291,16 +292,14 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Matt Solone</h1>
+<h1 class="title toc-ignore">Blog 1</h1>
+<h4 class="author">Matthew Solone</h4>
+<h4 class="date">2/9/2022</h4>
 
 </div>
 
 
-<div id="about-me" class="section level2">
-<h2>About me</h2>
-<p><img src="/Users/mattsolone/Documents/School/Spring%202022/MATH%20485/IMG_1850.png" /></p>
-<p>Hello all, my name is Matthew Solone. I am currently a second semester Junior at California State University, Chico. Currently pursing a degree in Computational Mathematics and Statistics and a certificate in Data Science. Ultimately I want to pursue a career as a Data Scientist and I am on my way. For summer 2022 I will be joining Avanade as a Data Engineering intern which I am super excited to learn the real world applications of my studies. In my free time you can find my in the gym or out on the links playing golf with my friends. I love to be outside and enjoy the wilderness so recently I have taken up more serious hiking and trail running. To find more techical interests check out the blog tab!</p>
-</div>
+
 
 
 
