--- a/blog1.html
+++ b/blog1.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Matthew Solone" />
 
 
-<title>Blog 1: Neo4j Graph Database</title>
+<title>Neo4j Graph Database</title>
 
 <script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -292,7 +292,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Blog 1: Neo4j Graph Database</h1>
+<h1 class="title toc-ignore">Neo4j Graph Database</h1>
 <h4 class="author">Matthew Solone</h4>
 <h4 class="date">2/9/2022</h4>
 
@@ -305,7 +305,7 @@ $(document).ready(function () {
 <p>Link to their website: <a href="https://neo4j.com/" class="uri">https://neo4j.com/</a></p>
 <div id="neo4j-bloom" class="section level3">
 <h3>Neo4j Bloom</h3>
-<p><img src="/Users/mattsolone/Documents/School/Spring%202022/MATH%20485/neo4jBloom.png" /></p>
+<p><img src="%22/Users/mattsolone/Documents/School/Spring%202022/MATH%20485/website-basic-mjsolone/neo4jBloom.png%22" /></p>
 </div>
 </div>
 
