--- a/blog1.html
+++ b/blog1.html
@@ -305,7 +305,7 @@ $(document).ready(function () {
 <p>Link to their website: <a href="https://neo4j.com/" class="uri">https://neo4j.com/</a></p>
 <div id="neo4j-bloom" class="section level3">
 <h3>Neo4j Bloom</h3>
-<p><img src="%22/Users/mattsolone/Documents/School/Spring%202022/MATH%20485/website-basic-mjsolone/neo4jBloom.png%22" /></p>
+<p><img src="img/neo4jBloom.png" /></p>
 </div>
 </div>
 
