--- a/blog1.html
+++ b/blog1.html
@@ -269,6 +269,9 @@ $(document).ready(function () {
     <li>
       <a href="blog1.html">Blog #1</a>
     </li>
+    <li>
+      <a href="tidymod.html">Linear Regression: Tidymodels</a>
+    </li>
   </ul>
 </li>
       </ul>
