Blog post take 6

--- a/tidymod.html
+++ b/tidymod.html
@@ -270,7 +270,7 @@ $(document).ready(function () {
       <a href="blog1.html">Blog #1</a>
     </li>
     <li>
-      <a href="tidymod.html">Linear Regression: Tidymodels</a>
+      <a href="tidymod.html">Linear Regression, Tidymodels</a>
     </li>
   </ul>
 </li>
@@ -326,7 +326,7 @@ $(document).ready(function () {
 ## x dplyr::filter()  masks stats::filter()
 ## x dplyr::lag()     masks stats::lag()
 ## x recipes::step()  masks stats::step()
-## • Dig deeper into tidy modeling with R at https://www.tmwr.org</code></pre>
+## • Use tidymodels_prefer() to resolve common conflicts.</code></pre>
 <pre class="r"><code># Helper packages
 library(readr)  </code></pre>
 <pre><code>## 
@@ -402,6 +402,7 @@ tidy(lm_fit)</code></pre>
 ## 2 AvgLength      21.2       1.92     11.0  2.91e-21
 ## 3 Height          9.70      3.83      2.54 1.22e- 2
 ## 4 Width          50.6      15.1       3.35 1.01e- 3</code></pre>
+<p>And there you go ! You have now successfully fit a regression model in the Tidy models framework.</p>
 </div>
 </div>
 
