--- a/pgapost.html
+++ b/pgapost.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Matthew Solone" />
 
 
-<title>Neo4j</title>
+<title>PGA Data Analysis</title>
 
 <script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -298,25 +298,24 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Neo4j</h1>
+<h1 class="title toc-ignore">PGA Data Analysis</h1>
 <h4 class="author">Matthew Solone</h4>
-<h4 class="date">2/9/2022</h4>
+<h4 class="date">5/7/2022</h4>
 
 </div>
 
 
-<div id="blog-1" class="section level1">
-<h1>Blog 1</h1>
-<div id="neo4j-future-of-data-science-databases" class="section level2">
-<h2>Neo4j future of data science databases?</h2>
-<p>I was originally introduced to Neo4j by my Dad who at the time said “This is the new technology that will take over your field.” I ignored him at the time but the more I look into what they are doing the more I am intrigued. What really caught my eye on their approach is that the Database not only leverages the data but also the relationships the data hold with one another. From what I have been reading on their site, Neo4j has a large variety of products to help businesses succeed. From basic data visualization through their “Bloom” application (see below) to more Data Science driven technology for developing machine learning techniques and graph analytics. Overall, I don’t know if it will replace the solid base of technical applications we have now but I think it will definitely be a huge supplement for the future of Data Science.</p>
-<p>Link to their website: <a href="https://neo4j.com/" class="uri">https://neo4j.com/</a></p>
-<div id="neo4j-bloom" class="section level3">
-<h3>Neo4j Bloom</h3>
-<p><img src="/img/neo4jBloom.png" /></p>
-</div>
-</div>
-</div>
+<p>Data Science in Golf has become one of the most important tools for not only analysts for broadcasting systems but also for companies and players. The players and golf companies use data to develop new strategies for themselves to improve their game.</p>
+<p>In this post I will go over some simple analytics used to evaluating and predicting performance of the top players in the PGA. I have obtained the raw data from this website; (<a href="https://www.advancedsportsanalytics.com/pga-user-guides/#pga-optimizer-app" class="uri">https://www.advancedsportsanalytics.com/pga-user-guides/#pga-optimizer-app</a>)</p>
+<p>The data is from Shotlink data which is the primary data collection application used by the PGA (<a href="https://www.pgatour.com/stats/academicdata/shotlink.html" class="uri">https://www.pgatour.com/stats/academicdata/shotlink.html</a>) . Shot link uses ’Strokes Gained(SG) statistics which are calculated using mathematical equations that incorporate player performance with the ShotLink® data collected by volunteers at each PGA TOUR tournament. SG is a better measure of performance compared to older gold statistics because it can isolate a players performance and compare to other players in the field. As an example on how SG is calculated, the PGA says this about SG: Putting - The statistic is computed by:</p>
+<p>Ex: Average number of putts to hole out from 7 feet, 10 inches is 1.5. If a player one-putts from that distance, he gains 0.5 strokes. If he two-putts, he loses 0.5 strokes. If he three-putts, he loses 1.5 strokes.</p>
+<p>There are more SG stats as well:</p>
+<p>“The new strokes gained statistics, which were introduced June 1, 2016, break down tee-to-green play into three categories: off-the-tee, approach-the-green and around-the-green. The sum of those three statistics equals strokes gained is tee-to-green.</p>
+<p>Off-the-tee + approach-the-green + around-the-green + putting = strokes gained: total</p>
+<p>Strokes Gained: Off-the-Tee measures player performance off the tee on all par-4s and par-5s.</p>
+<p>Strokes Gained: Approach-the-Green measures player performance on approach shots. Approach shots include all shots that are not from the tee on par-4 and par-5 holes and are not included in strokes gained: around-the-green and strokes gained: putting. Approach shots include tee shots on par-3s.</p>
+<p>Strokes Gained: Around-the-Green measures player performance on any shot within 30 yards of the edge of the green. This statistic does not include any shots taken on the putting green”</p>
+<p>From these statistics I believe we can accurately predict a players performance, ’finish`, based on the SG statistics.</p>
 
 
 
