--- a/pgapost.html
+++ b/pgapost.html
@@ -389,6 +389,11 @@ confusionMatrix(pga_raw$made_cut,pred_log$.pred_class)</code></pre>
 <ul>
 <li>The confusion matrix shows a a true positive rate of 0.7636 and a true negative rate of 0.7632 which is not too bad but ideally we would be in the 90% range. So in total we are correct about 76.33% of the time. We correctly predicted making the cut about 82.48% of the time in and correctly predicted not making the cut 68.85 % of the time.</li>
 </ul>
+<p>Bio -</p>
+<p>My name is Matthew Solonem, I am currently an incming Senior at California State University, Chico. Currently pursing a degree in Computational Mathematics and Statistics and a certificate in Data Science. My goal is to use data science to provide meaningful analysis to help drive better buisiness decisions.</p>
+<p>LinkedIn - <a href="https://www.linkedin.com/in/matthewsolone/" class="uri">https://www.linkedin.com/in/matthewsolone/</a></p>
+<p>GitHub - <a href="https://github.com/mjsolone" class="uri">https://github.com/mjsolone</a></p>
+<p>Email - <a href="mailto:mattsolone18@gmail.com" class="email">mattsolone18@gmail.com</a></p>
 
 
 
