--- a/tidymod.html
+++ b/tidymod.html
@@ -270,7 +270,10 @@ $(document).ready(function () {
       <a href="blog1.html">Blog #1</a>
     </li>
     <li>
-      <a href="tidymod.html">Linear Regression, Tidymodels</a>
+      <a href="tidymod.html">Tidymodel regression</a>
+    </li>
+    <li>
+      <a href="pgapost.html">Data Science use in PGA Analysis</a>
     </li>
   </ul>
 </li>
@@ -319,13 +322,14 @@ $(document).ready(function () {
 ## ✓ ggplot2      3.3.5      ✓ tidyr        1.2.0 
 ## ✓ infer        1.0.0      ✓ tune         0.1.6 
 ## ✓ modeldata    0.1.1      ✓ workflows    0.2.4 
-## ✓ parsnip      0.1.7      ✓ workflowsets 0.1.0 
+## ✓ parsnip      0.2.1      ✓ workflowsets 0.1.0 
 ## ✓ purrr        0.3.4      ✓ yardstick    0.0.9</code></pre>
 <pre><code>## ── Conflicts ───────────────────────────────────────── tidymodels_conflicts() ──
 ## x purrr::discard() masks scales::discard()
 ## x dplyr::filter()  masks stats::filter()
 ## x dplyr::lag()     masks stats::lag()
 ## x recipes::step()  masks stats::step()
+## x tune::tune()     masks parsnip::tune()
 ## • Use tidymodels_prefer() to resolve common conflicts.</code></pre>
 <pre class="r"><code># Helper packages
 library(readr)  </code></pre>
