--- a/pgapost.html
+++ b/pgapost.html
@@ -305,19 +305,23 @@ $(document).ready(function () {
 </div>
 
 
-<p>Data Science in Golf has become one of the most important tools for not only analysts for broadcasting systems but also for companies and players. The players and golf companies use data to develop new strategies for themselves to improve their game.</p>
+<div id="problem-statement" class="section level3">
+<h3>Problem Statement</h3>
+<p>Data Science in Golf has become one of the most important tools for not only analysts for broadcasting systems but also for companies and players. The players and golf companies use data to develop new strategies for themselves to improve their game. In this blog I believe we can accurately predict a players ability to make the cut, ’made_cut`(1 being made the cut and 0 being did not make the cut), based on the SG statistics. To do this we will fit a logistic regression model to the data and try and find correlation between the variables.</p>
+</div>
+<div id="data-gathering" class="section level3">
+<h3>Data Gathering</h3>
 <p>In this post I will go over some simple analytics used to evaluating and predicting performance of the top players in the PGA. I have obtained the raw data from this website; (<a href="https://www.advancedsportsanalytics.com/pga-user-guides/#pga-optimizer-app" class="uri">https://www.advancedsportsanalytics.com/pga-user-guides/#pga-optimizer-app</a>)</p>
 <p>The data is from Shotlink data which is the primary data collection application used by the PGA (<a href="https://www.pgatour.com/stats/academicdata/shotlink.html" class="uri">https://www.pgatour.com/stats/academicdata/shotlink.html</a>) . Shot link uses ’Strokes Gained(SG) statistics which are calculated using mathematical equations that incorporate player performance with the ShotLink® data collected by volunteers at each PGA TOUR tournament. SG is a better measure of performance compared to older gold statistics because it can isolate a players performance and compare to other players in the field. As an example on how SG is calculated, the PGA says this about SG: Putting - The statistic is computed by:</p>
 <p>Ex: Average number of putts to hole out from 7 feet, 10 inches is 1.5. If a player one-putts from that distance, he gains 0.5 strokes. If he two-putts, he loses 0.5 strokes. If he three-putts, he loses 1.5 strokes.</p>
 <p>There are more SG stats as well:</p>
-<p>“The new strokes gained statistics, which were introduced June 1, 2016, break down tee-to-green play into three categories: off-the-tee, approach-the-green and around-the-green. The sum of those three statistics equals strokes gained is tee-to-green.</p>
-<p>Off-the-tee + approach-the-green + around-the-green + putting = strokes gained: total</p>
-<p>Strokes Gained: Off-the-Tee measures player performance off the tee on all par-4s and par-5s.</p>
-<p>Strokes Gained: Approach-the-Green measures player performance on approach shots. Approach shots include all shots that are not from the tee on par-4 and par-5 holes and are not included in strokes gained: around-the-green and strokes gained: putting. Approach shots include tee shots on par-3s.</p>
-<p>Strokes Gained: Around-the-Green measures player performance on any shot within 30 yards of the edge of the green. This statistic does not include any shots taken on the putting green”</p>
-<p>From these statistics I believe we can accurately predict a players ability to make the cut, ’made_cut`(1 being made the cut and 0 being did not make the cut), based on the SG statistics. To do this we will fit a logistic regression model to the data and try and find correlation between the variables.</p>
+<p>The new strokes gained statistics, which were introduced June 1, 2016, break down tee-to-green play into three categories: off-the-tee, approach-the-green and around-the-green. The sum of those three statistics equals strokes gained is tee-to-green.</p>
 <ul>
-<li>First lets look at some simple plots of our data and tidy it up a bit. Also remember to load in the librarys we will be using.</li>
+<li><p>Off-the-tee + approach-the-green + around-the-green + putting = strokes gained: total</p></li>
+<li><p>Strokes Gained: Off-the-Tee measures player performance off the tee on all par-4s and par-5s.</p></li>
+<li><p>Strokes Gained: Approach-the-Green measures player performance on approach shots. Approach shots include all shots that are not from the tee on par-4 and par-5 holes and are not included in strokes gained: around-the-green and strokes gained: putting. Approach shots include tee shots on par-3s.</p></li>
+<li><p>Strokes Gained: Around-the-Green measures player performance on any shot within 30 yards of the edge of the green. This statistic does not include any shots taken on the putting green”</p></li>
+<li><p>First lets look at some simple plots of our data and tidy it up a bit. Also remember to load in the library’s we will be using.</p></li>
 </ul>
 <pre class="r"><code>library(tidymodels) 
 library(tidyverse)
@@ -329,6 +333,9 @@ library(discrim)
 library(corrplot)
 library(stargazer)
 library(discrim)</code></pre>
+</div>
+<div id="data-cleaning-and-data-modeling" class="section level3">
+<h3>Data Cleaning and Data Modeling</h3>
 <ul>
 <li>Fitting our model</li>
 </ul>
@@ -386,14 +393,18 @@ confusionMatrix(pga_raw$made_cut,pred_log$.pred_class)</code></pre>
 ##                                          
 ##        &#39;Positive&#39; Class : 0              
 ## </code></pre>
+</div>
+<div id="conclusion" class="section level3">
+<h3>Conclusion</h3>
 <ul>
 <li>The confusion matrix shows a a true positive rate of 0.7636 and a true negative rate of 0.7632 which is not too bad but ideally we would be in the 90% range. So in total we are correct about 76.33% of the time. We correctly predicted making the cut about 82.48% of the time in and correctly predicted not making the cut 68.85 % of the time.</li>
 </ul>
 <p>Bio -</p>
-<p>My name is Matthew Solonem, I am currently an incming Senior at California State University, Chico. Currently pursing a degree in Computational Mathematics and Statistics and a certificate in Data Science. My goal is to use data science to provide meaningful analysis to help drive better buisiness decisions.</p>
+<p>My name is Matthew Solone, I am currently an incoming Senior at California State University, Chico. Currently pursing a degree in Computational Mathematics and Statistics and a certificate in Data Science. My goal is to use data science to provide meaningful analysis to help drive better business decisions.</p>
 <p>LinkedIn - <a href="https://www.linkedin.com/in/matthewsolone/" class="uri">https://www.linkedin.com/in/matthewsolone/</a></p>
 <p>GitHub - <a href="https://github.com/mjsolone" class="uri">https://github.com/mjsolone</a></p>
 <p>Email - <a href="mailto:mattsolone18@gmail.com" class="email">mattsolone18@gmail.com</a></p>
+</div>
 
 
 
